# plugin-storage-s3

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: host_bridge.rs  lib.rs  s3_ops.rs  sigv4.rs
