[package]
name = "diaryx_storage_s3_extism"
version = "0.1.4"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
diaryx_plugin_sdk = { version = "0.2.1", features = ["core", "http", "secrets"] }

[profile.release]
lto = "fat"
codegen-units = 1
